--- a/blog/2021-01-20.md
+++ b/blog/2021-01-20.md
@@ -19,3 +19,15 @@
 
 其他人无权做任何事  
 只针对问题做解决方案本身
+
+
+
+-------
+Time: 22:31  
+今天发了通知，回乡的人需要提供7天阴性核酸检测报告。  
+于是，就正式把票退了。  
+那就在这里过年吧。  
+一年没有回家，但是也没有办法。  
+回头想想，家里除了父母跟奶奶其实也没有其他挂念的。  
+一个人在外，最需要的就是自己做决定。  
+选择并承受，这就是人生吧。
