一些暂存的记录

--- a/blog/2020-11-01.md
+++ b/blog/2020-11-01.md
@@ -52,3 +52,13 @@
 中断，说干就干
 
 ---
+2020-11-05
+
+一个想做游戏的程序，如果从头开始编写引擎，这似乎偏离了原来的目标。  
+为什么要做游戏？大概跟其他人一样，有一个对谁都不想讲起的故事，只是想把它做出来而已。人在世上匆匆碌碌，只是希望自己能够留下什么而已。  
+要说一切的开始，我忘记了。  
+那么我的故事，可以开始讲了。  
+
+~~**工欲善其事必先利其器** 
+在开始写代码前，不要贸然行动，一定要找好对自己，对接下来的工程最有利的工具。~~
+
