--- a/blog/2021-02-24.md
+++ b/blog/2021-02-24.md
@@ -20,3 +20,15 @@
 -----
 
 怎么改变呢？
+
+----
+@time 02-26
+
+喜欢特摄的独身中年人 35岁 相貌平平 
+住在单身公寓 
+
+在夜晚街头卖臭豆腐的老人 只是呆坐着 饿了 撕开一包饼干 慢慢送到嘴里  
+傍边卖卤味的年轻人 抽着烟 看着手机  
+卖烧烤的年轻夫妇
+卖炒粉的中年夫妇
+
